# sklad

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
sklad/: bot.py  cli.py  db.py  main.py  twitter.py
